# mega-autoscaler

./: Cargo.toml  README.md
dockerfiles/: main.Dockerfile
src/: launch.rs  lb.rs  main.rs
src/services/: backend.rs  discovery.rs  machine_orchestrator.rs  mod.rs  user_data.rs
src/services/aws/: aws_ami.rs  aws_machine_orchestrator.rs  aws_machine_service.rs  aws_machine_user_data.rs  aws_service_discovery.rs  mod.rs  utils.rs
