[package]
name = "load-balancer"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.127.0"
tokio = { version = "1.45.1", features = ["full"] }
pingora = { version = "0.5.0", features = ["lb"] }
log = "0.4.27"
env_logger = "0.11.8"
base64 = "0.22.1"
reqwest = "0.12.15"
clap = { version = "4.5.38", features = ["derive"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "launch"
path = "src/launch.rs"

# [target.aarch64-unknown-linux-gnu]
# linker = "aarch64-linux-gnu-gcc"
# rustflags = ["-C", "target-feature=+crt-static"]


# [patch.crates-io]
# sfv = { git = "https://github.com/undef1nd/sfv.git", tag = "v0.9.4" }
# cargo update -p sfv@0.11.0 --precise 0.10.4
